Fix spacing around text in editor

--- a/src/assets/editor-style.less
+++ b/src/assets/editor-style.less
@@ -14,10 +14,10 @@
 @import 'less/typography';
 @import 'less/media';
 
-body {
+body#tinymce {
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px;
+	padding: 20px !important;
 	max-width: 660px;
 	.font-size(17);
 }
